# STM32-Lite-Libs-Demo

./: .gitmodules  .mxproject  CMakeLists.txt  STM32-Lite-Libs-Demo.ioc  STM32G071GBUxN_FLASH.ld
Inc/: main.h
Src/: main.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
